@startuml
!pragma layout smetana
class FileIO
class Gnoxi
class GUI
class Main
class Menu
class Shop
class Calculator
class ButtonHandler


Main : Menu.MusicPlayer()
Main : new Gnoxi.Shutdown()
Main : new Menu()

Menu : public Menu()
Menu : Settings()
Menu : musicPlayer()
Menu : menuFrame
Menu : settingsFrame

FileIO : checkForGnoxi()
FileIO : saveExists()
FileIO : deleteSave()
FileIO : writeGnoxi()
FileIO : createOldGnoxi()
FileIO : getTimeDifference()

Calculator : calcHunger(int hunger)
Calculator : calcHappiness(int happiness)
Calculator : calcEnergy(int energy)
Calculator : calcAge(int age)

GUI : newGnoxi()
GUI : static Gnoxi currentGnoxi
GUI : oldGnoxi()
GUI : death()
GUI : public GUI(currentGnoxi)
GUI : sfxPlayer
GUI : Jframe frame

Shop : buy(int itemNumber)

Gnoxi : public Gnoxi(+12 parameteres)
Gnoxi : gnoxiType()
Gnoxi : setBow()
Gnoxi : setTophat()
Gnoxi : setScarf()
Gnoxi : getAge()
Gnoxi : save()
Gnoxi : Shutdown()

ButtonHandler : actionPerformed(ActionEvent e)
ButtonHandler : e.getSource()



Main --> Menu
Main --> Gnoxi
Menu --> FileIO
Menu --> ButtonHandler
FileIO --> GUI
FileIO --> Calculator
GUI --> Gnoxi
GUI --> Calculator
GUI --> FileIO
GUI --> Menu
GUI --> ButtonHandler
GUI --> Shop
Gnoxi --> GUI




@enduml